@@ -141,7 +141,7 @@ return array(
     'breadcrumbs.sql_bindings' => true,
 
     // Capture default user context
-    'user_context' => true,
+    'user_context' => false,
 );
 ```
 
